--- a/src/main/resources/hi/vidmot/heima-view.fxml
+++ b/src/main/resources/hi/vidmot/heima-view.fxml
@@ -4,12 +4,16 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.vidmot.PlayerController">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="20.0" 
+xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.vidmot.PlayerController"
+styleClass="heima-bakgrunnur">
       <stylesheets>
     <URL value="@css/styles.css" />
 </stylesheets>
@@ -17,21 +21,33 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
    <children>
-      <Label text="Status: " fx:id="fxStatus"/>
+      <Label fx:id="fxStatus" text="Status: " />
       <Button fx:id="fxLogin" mnemonicParsing="false" onAction="#onLogin" text="Áskrifandi" />
-      <GridPane>
+      <GridPane prefHeight="178.0" prefWidth="760.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="62.0" minHeight="0.0" prefHeight="62.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="22.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" onAction="#onVeljaLista" prefHeight="28.0" prefWidth="99.0" text="lagalist 1" GridPane.columnIndex="0" />
-            <Button mnemonicParsing="false" onAction="#onVeljaLista" prefHeight="28.0" prefWidth="100.0" text="lagalisti 2" GridPane.columnIndex="1" />
+            <Button mnemonicParsing="false" onAction="#onVeljaLista" prefHeight="67.0" prefWidth="415.0" text="lagalist 1" GridPane.columnIndex="0">
+               <graphic>
+                  <ImageView fitHeight="60.0" fitWidth="260.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@media/sun.png" />
+                     </image></ImageView>
+               </graphic></Button>
+            <Button mnemonicParsing="false" onAction="#onVeljaLista" prefHeight="85.0" prefWidth="455.0" text="lagalisti 2" GridPane.columnIndex="1">
+               <graphic>
+                  <ImageView fitHeight="60.0" fitWidth="260.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@media/moon.png" />
+                     </image></ImageView>
+               </graphic></Button>
          </children>
       </GridPane>
    </children>
